Show docs sub-nav on mobile (Fixes GH-185)

--- a/src/stylesheets/docs.css
+++ b/src/stylesheets/docs.css
@@ -275,3 +275,13 @@ header.invisible{
   -ms-transform: translate(0, -102px);
   transform: translate(0, -102px);
 }
+
+/* shows sub-nav on mobile */
+/* TODO: find better place for this */
+.mobile header, .mobile header.detached {
+  height: 125px;
+}
+
+.mobile .sub-nav {
+  display: block;
+}
